FIX: Out of sync outlet visibility on route change
Improves code by toggling outlets using body class instead of style on `.outlets`

--- a/common/common.scss
+++ b/common/common.scss
@@ -2,5 +2,9 @@
     border: 1px solid black;
     background-color: #f00;
     color: #fff;
+    display: none;
 }
 
+body.plugin-outlets-visible .outlet {
+    display: block;
+}
